<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FingerprintActivity"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="@drawable/divider"
        android:showDividers="middle"
        android:padding="24dp"
        android:dividerPadding="-8dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detected_networks_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:text="@string/detected_networks" />

            <ListView
                android:id="@+id/networkListView"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="8dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ref_x"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:labelFor="@id/reference_x"/>

                <EditText
                    android:id="@+id/reference_x"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:gravity="center"
                    android:autofillHints="ref_x"
                    android:inputType="numberDecimal"
                    android:text="@string/zero"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reference_y"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:labelFor="@id/reference_y"/>

                <EditText
                    android:id="@+id/reference_y"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:gravity="center"
                    android:autofillHints="ref_y"
                    android:inputType="numberDecimal"
                    android:text="@string/zero"/>

            </LinearLayout>

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:rowCount="3"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/up_arrow"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:text="@string/up_arrow"/>

                <Button
                    android:id="@+id/left_arrow"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="8dp"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:text="@string/left_arrow"/>

                <Button
                    android:id="@+id/right_arrow"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="8dp"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:text="@string/right_arrow"/>

                <Button
                    android:id="@+id/down_arrow"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:text="@string/down_arrow"/>


            </GridLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/check_location_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="10dp"
                    android:text="@string/refresh" />

                <Button
                    android:id="@+id/submit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:text="@string/submit" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
